@@ -5,6 +5,8 @@
 - compat-25: Add ~hash-table-empty-p~.
 - compat-25: Add ~macroexp-parse-body~ and ~macroexp-quote~.
 - compat-25: Add ~save-mark-and-excursion~.
+- compat-25: Add ~region-noncontiguous-p~.
+- compat-26: Add ~region-bounds~.
 - compat-27: Add ~date-ordinal-to-time~.
 - compat-27: Add ~make-decoded-time~.
 - compat-27: Add ~ring-resize~.
@@ -19,7 +21,7 @@
 - compat-29: Add ~delete-line~.
 - compat-29: Add ~with-narrowing~.
 - compat-29: Add ~buffer-local-set-state~ and ~buffer-local-restore-state~.
-- compat-29: Add ~use-region-beginning~ and ~use-region-end~.
+- compat-29: Add ~use-region-beginning~, ~use-region-end~ and ~use-region-noncontiguous-p~.
 - compat-29: Add ~get-scratch-buffer-create~.
 
 * Release of "Compat" Version 29.1.2.0
